// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`captures values 1`] = `
"<Root 
  <Capture(undefined) displayName={undefined} capture={true} [<Node >,<Node >,…] (…) (0, _builtin.use)(Node, (0, _builtin.ca…
    <Node 
    <Node 
    <Node 
    <Resume(undefined) (…) (0, _builtin.use)(Node, (0, _builtin.ca…
      <Node [1,2,…]"
`;

exports[`gathers yeeted values 1`] = `
"<Root 
  <Yeet 1
  <Value 
  <Yeet 3
  <Resume(Root) (…) (0, _builtin.use)(Node, values)
    <Node [1,2,…]"
`;

exports[`renders quote/unquote pairs 1`] = `
"<Root 
  <First <Quote <Second …>>
    <Quote <Second <Unquote …>>
      <First <Quote <Unquote …>>
        <First <First <Quote …>>
          <First <Quote <Second >>
  <Reconcile(Root) 
    <Second <Second <Unquote …>>
      <Second <Unquote <Quote …>>
        <Second <Unquote <First …>>
          <Unquote <First <First …>>
            <Second "
`;

exports[`renders quoted tree 1`] = `
"<Root 
  <Node 
  <Quote <Tree >
  <Node 
  <Reconcile(Root) 
    <Tree 
      <Node <Node <Node >>
        <Node <Node >
          <Node "
`;

exports[`renders quoted/unquoted trees 1`] = `
"<Root 
  <Reconcile <Quote <Second …>>
    <Quote <Second <Second …>>
      <First <Quote <Second …>>
        <First <First <Quote …>>
          <First <Quote <Second >>
    <Reconcile(…) 
      <Second <Second <Unquote …>>
        <Second <Unquote <First …>>
          <Second <Unquote <First …>>
            <Second "
`;

exports[`yeets from capture 1`] = `
"<Root 
  <Capture(undefined) displayName={undefined} capture={true} [f={YEET(…) {}} arg={1} key={undefined} by={51},f={…} arg={…} key={…} by={…},…,…] (…) (0, _builtin.yeet)((0, _builtin.capture…
    <Yeet 1
    <Yeet 2
    <Node 
    <Node 
    <Resume(undefined) (…) (0, _builtin.yeet)((0, _builtin.capture…
  <Resume(Root) (…) (0, _builtin.use)(Node, values)
    <Node [1,2,…,…]"
`;
